add game management logic + seed data script
